--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,11 @@
 <body>
     <h2>Integração do HTML com FLASK</h2>
     <hr>
+<ol>
+    <li>{{fruta1}}</li>
+    <li>{{fruta2}}</li>
+    <li>{{fruta3}}</li>
+    <li>{{fruta4}}/</li>
+</ol>
 </body>
 </html>
