--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
     <h2>Integração do HTML com FLASK</h2>
     <hr>
 <ol>
-    <li>{{fruta1}}</li>
-    <li>{{fruta2}}</li>
-    <li>{{fruta3}}</li>
-    <li>{{fruta4}}/</li>
+    {% for fruta in frutas %}
+        <li>{{fruta}}</li>
+    {% endfor %}
 </ol>
+
 </body>
 </html>
