--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -9,5 +9,11 @@
 <body>
     <h2>Sobre min</h2>
     <hr>
+{% for chave, valor in notas.items() %}
+    <details>
+        <summary>{{chave}}</summary>
+        <p>{{valor}}</p>
+    </details>
+{% endfor %}
 </body>
 </html>
