--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Integrando HTML ao Flask</title>
+    <title>Lista de Frutas</title>
 </head>
 <body>
-    <h2>Integração do HTML com FLASK</h2>
+    <h2 style="text-align: center">Lista de Frutas</h2>
     <hr>
 <ol>
     {% for fruta in frutas %}
         <li>{{fruta}}</li>
     {% endfor %}
 </ol>
+<form action="{{url_for('principal')}}" method="POST">
+    <label for="">Frutas</label>
+    <input type="text" name="fruta">
+    <button>Adicionar</button>
+</form>
 
 </body>
 </html>
