Adicionando dados a um dicionario

--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -7,13 +7,20 @@
     <title>Sobre</title>
 </head>
 <body>
-    <h2>Sobre min</h2>
+    <h2 style="text-align: center;">Diário do Professor</h2>
     <hr>
-{% for chave, valor in notas.items() %}
+{% for registro in registros %}
     <details>
-        <summary>{{chave}}</summary>
-        <p>{{valor}}</p>
+        <summary>{{registro.aluno}}</summary>
+        <p>{{registro.nota}}</p>
     </details>
 {% endfor %}
+<form action="{{url_for('sobre')}}" method="POST">
+    <label for="">Aluno</label>
+    <input type="text" name="aluno" required>
+    <label for="">Nota</label>
+    <input type="text" name="nota" required>
+    <button>Adicionar</button>
+</form>
 </body>
 </html>
