--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Frutas</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block conteudo %}
     <h2 style="text-align: center">Lista de Frutas</h2>
     <hr>
 <ol>
@@ -20,5 +13,4 @@
     <button>Adicionar</button>
 </form>
 
-</body>
-</html>
+{% endblock conteudo %}
