--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block conteudo %}
     <h2 style="text-align: center;">Diário do Professor</h2>
     <hr>
 {% for registro in registros %}
@@ -22,5 +15,4 @@
     <input type="text" name="nota" required>
     <button>Adicionar</button>
 </form>
-</body>
-</html>
+{% endblock conteudo %}
