--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,11 @@
                 </ul>
             </div>
         </div>
-      </nav>
-    {% block conteudo %}
-    {% endblock conteudo %}
+    </nav>
+    <div class="container">
+          {% block conteudo %}
+          {% endblock conteudo %}
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
