--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,16 @@
 {% block conteudo %}
     <h2 style="text-align: center">Lista de Frutas</h2>
     <hr>
-<ol>
-    {% for fruta in frutas %}
-        <li>{{fruta}}</li>
-    {% endfor %}
-</ol>
-<form action="{{url_for('principal')}}" method="POST">
-    <label for="">Frutas</label>
-    <input type="text" name="fruta">
-    <button>Adicionar</button>
-</form>
-
+    <ul class="list-group">
+        {% for fruta in frutas %}
+            <li  class="list-group-item">{{fruta}}</li>
+        {% endfor %}
+    </ul>
+    <form action="{{url_for('principal')}}" method="POST">
+        <div class="form-group">
+            <label for="fruta" class="col-sm-2 col-form-label">Frutas</label>
+            <input type="text" name="fruta" class="form-control" id="fruta" placeholder="Digite um nome de uma fruta">
+        </div>
+        <button class="btn btn-success">Adicionar</button>
+    </form>
 {% endblock conteudo %}
