--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -8,11 +8,15 @@
         <p>{{registro.nota}}</p>
     </details>
 {% endfor %}
-<form action="{{url_for('sobre')}}" method="POST">
-    <label for="">Aluno</label>
-    <input type="text" name="aluno" required>
-    <label for="">Nota</label>
-    <input type="text" name="nota" required>
-    <button>Adicionar</button>
-</form>
+    <form action="{{url_for('sobre')}}" method="POST">
+        <div class="form-group">
+            <label for="aluno">Aluno</label>
+            <input type="text" name="aluno"  class="form-control" id="aluno" placeholder="Digite o nome dop aluno" required>
+        </div>
+        <div class="form-group">
+            <label for="nota" class="col-sm-2 col-form-label">Nota</label>
+            <input type="text" name="nota"  class="form-control" id="fruta" placeholder="Digite a nota do aluno" required>
+        </div>
+        <button class="btn btn-success">Adicionar</button>
+    </form>
 {% endblock conteudo %}
