--- a/templates/base.html
+++ b/templates/base.html
@@ -20,20 +20,21 @@
                         <a class="nav-link active" aria-current="page" href="{{url_for('principal')}}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('filmes')}}">Filmes</a>
+                        <a class="nav-link" href="#">Filmes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('sobre')}}">Sobre</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
+                            Filmes
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="{{url_for('filmes')}}">Mais Populares</a></li>
+                            <li><a class="dropdown-item" href="#">Kids</a></li>
+                            <li><a class="dropdown-item" href="#">Drama</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Tom Cruise</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
