--- a/templates/base.html
+++ b/templates/base.html
@@ -30,11 +30,12 @@
                             Filmes
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{{url_for('filmes')}}">Mais Populares</a></li>
-                            <li><a class="dropdown-item" href="#">Kids</a></li>
-                            <li><a class="dropdown-item" href="#">Drama</a></li>
+                            <li><a class="dropdown-item" href="{{url_for('filmes', propriedade='populares')}}">Mais Populares</a></li>
+                            <li><a class="dropdown-item" href="{{url_for('filmes', propriedade='kids')}}">Kids</a></li>
+                            <li><a class="dropdown-item" href="{{url_for('filmes', propriedade='2010')}}">2010</a></li>
+                            <li><a class="dropdown-item" href="{{url_for('filmes', propriedade='drama')}}">Drama</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Tom Cruise</a></li>
+                            <li><a class="dropdown-item" href="{{url_for('filmes', propriedade='tom_cruise')}}">Tom Cruise</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
